<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/content_main_margin_top"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btnDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="debug"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/txtsize_title"
                android:text="@string/cafeteria_student" />
            <TextView
                android:id="@+id/tvHaksik_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txtsize_list"
                android:text="@string/preparing"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/txtsize_title"
                android:text="@string/cafeteria_dorm" />
            <TextView
                android:id="@+id/tvHaksik_dorm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txtsize_list"
                android:text="@string/preparing"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/txtsize_title"
        android:layout_marginTop="20dp"
        android:text="@string/cafeteria_employee" />

    <TextView
        android:id="@+id/tvHaksik_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txtsize_list"
        android:text="@string/preparing"/>

</LinearLayout>